# zizany

./: .gitignore  CMakeLists.txt  README.md
libs/gdtoa/: .gitignore  CMakeLists.txt  download.cmake  fix_header.sh
src/: CMakeLists.txt  asset_reference.cpp  asset_reference.hpp  delta_store.cpp  delta_store.hpp  endianness.hpp  file_lock.cpp  file_lock.hpp  file_stream.cpp  file_stream.hpp  guid.cpp  guid.hpp  json_writer.cpp  json_writer.hpp  main.cpp  owning_vector.hpp  parse_exception.cpp  parser_exception.hpp  pod_vector.hpp  program_options.cpp  program_options.hpp  range_checker.cpp  range_checker.hpp  registry.hpp  reverse_delta_store.cpp  reverse_delta_store.hpp  simple_delta_store.cpp  simple_delta_store.hpp  stream_parser.cpp  stream_parser.hpp  type_factory.cpp  type_factory.hpp  unity_asset.cpp  unity_asset.hpp  unity_file.cpp  unity_file.hpp  unity_file_parser.cpp  unity_file_parser.hpp  unity_file_printer.cpp  unity_file_printer.hpp  (+19 more)
src/deltas/: asset_added_delta.cpp  asset_added_delta.hpp  asset_changed_delta.cpp  asset_changed_delta.hpp  asset_delta.cpp  asset_delta.hpp  asset_member_added_delta.cpp  asset_member_added_delta.hpp  asset_member_removed_delta.cpp  asset_member_removed_delta.hpp  asset_members_delta.cpp  asset_members_delta.hpp  asset_removed_delta.cpp  asset_removed_delta.hpp  asset_type_2_delta.cpp  asset_type_2_delta.hpp  asset_type_delta.cpp  asset_type_delta.hpp  assets_delta.cpp  assets_delta.hpp  delta.cpp  delta.hpp  file_endianness_changed_delta.cpp  file_endianness_changed_delta.hpp  file_endianness_delta.cpp  file_endianness_delta.hpp  file_layout_changed_delta.cpp  file_layout_changed_delta.hpp  file_layout_delta.cpp  file_layout_delta.hpp  file_magic_changed_delta.cpp  file_magic_changed_delta.hpp  file_magic_delta.cpp  file_magic_delta.hpp  file_reference_added_delta.cpp  file_reference_added_delta.hpp  file_reference_changed_delta.cpp  file_reference_changed_delta.hpp  file_reference_delta.cpp  file_reference_delta.hpp  (+36 more)
src/diff/: delta.cpp  delta_sequence_operation.hpp  delta_set_operation.hpp  delta_store.hpp  file_comparer.cpp  file_comparer.hpp  file_reference_comparer.cpp  file_reference_comparer.hpp  identified_type.cpp  identified_type.hpp  member_path.cpp  member_path.hpp  preview_comparer.cpp  preview_comparer.hpp  reverse_delta_store.cpp  reverse_delta_store.hpp  sequence_comparer.cpp  sequence_comparer.hpp  simple_delta_store.cpp  simple_delta_store.hpp  type_comparer.cpp  type_comparer.hpp  type_identity.cpp  type_identity.hpp
src/diff/deltas/: asset_delta.cpp  asset_delta.hpp  asset_members_delta.cpp  asset_members_delta.hpp  asset_type_2_delta.cpp  asset_type_2_delta.hpp  asset_type_delta.cpp  asset_type_delta.hpp  assets_delta.cpp  assets_delta.hpp  file_endianness_delta.cpp  file_endianness_delta.hpp  file_layout_delta.cpp  file_layout_delta.hpp  file_magic_delta.cpp  file_magic_delta.hpp  file_reference_delta.cpp  file_reference_delta.hpp  file_references_delta.cpp  file_references_delta.hpp  preview_delta.cpp  preview_delta.hpp  previews_delta.cpp  previews_delta.hpp  sequence_delta.cpp  sequence_delta.hpp  type_delta.cpp  type_delta.hpp  type_members_delta.cpp  type_members_delta.hpp  types_delta.cpp  types_delta.hpp  unity_version_delta.cpp  unity_version_delta.hpp
src/value_parsers/: array_value_parser.cpp  array_value_parser.hpp  asset_reference_value_parser.cpp  asset_reference_value_parser.hpp  blob_value_parser.cpp  blob_value_parser.hpp  bool_value_parser.cpp  bool_value_parser.hpp  composite_value_parser.cpp  composite_value_parser.hpp  double_value_parser.cpp  double_value_parser.hpp  fixed_size_blob_value_parser.cpp  fixed_size_blob_value_parser.hpp  float_value_parser.cpp  float_value_parser.hpp  guid_value_parser.cpp  guid_value_parser.hpp  inline_array_value_parser.cpp  inline_array_value_parser.hpp  integer_value_parser.hpp  multiline_string_value_parser.cpp  multiline_string_value_parser.hpp  padded_value_parser.cpp  padded_value_parser.hpp  string_value_parser.cpp  string_value_parser.hpp  tail_blob_value_parser.cpp  tail_blob_value_parser.hpp
src/values/: unity_array_value.cpp  unity_array_value.hpp  unity_asset_reference_value.cpp  unity_asset_reference_value.hpp  unity_blob_value.cpp  unity_blob_value.hpp  unity_bool_array_value.cpp  unity_bool_array_value.hpp  unity_bool_value.cpp  unity_bool_value.hpp  unity_composite_value.cpp  unity_composite_value.hpp  unity_dense_array_value.hpp  unity_double_value.cpp  unity_double_value.hpp  unity_float_value.cpp  unity_float_value.hpp  unity_guid_value.cpp  unity_guid_value.hpp  unity_inline_array_value.cpp  unity_inline_array_value.hpp  unity_integer_value.hpp  unity_multiline_string_value.cpp  unity_multiline_string_value.hpp  unity_simple_value.hpp  unity_string_value.cpp  unity_string_value.hpp  unity_value.cpp  unity_value.hpp
